# predictably-core

./: .all-contributorsrc  .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-issue.md  feature_request.md
.github/workflows/: codeql.yml  dependency-review.yml  pre-commit-all-files.yml  release.yml  test.yml  update_contributors.yml
build_tools/: fail_on_missing_init_files.sh
docs/source/: about.rst  api_reference.rst  conf.py  get_involved.rst  get_started.rst  index.rst  users.rst
docs/source/about/: governance.rst  overview.rst  roadmap.rst
docs/source/get_involved/: ci.rst  dev_installation.rst  git_workflow.rst
docs/source/user_documentation/: changelog.rst  glossary.rst  installation.rst  user_guide.rst
docs/source/user_documentation/user_guide/: configuration.rst  overview.rst
predictably_core/: __init__.py
predictably_core/config/: __init__.py  _config.py  _config_param_setting.py
predictably_core/config/tests/: __init__.py  test_config.py
predictably_core/core/: __init__.py  _base.py  _clone.py  _exceptions.py
predictably_core/core/_pprint/: __init__.py  _object_html_repr.py  _pprint.py
predictably_core/core/_pprint/tests/: __init__.py  conftest.py  test_baseobject_pretty_printer.py  test_changed_params.py  test_get_visual_block.py  test_visual_block.py  test_write_base_object_html.py  test_write_label_html.py
predictably_core/core/tests/: __init__.py  test_base.py  test_baseestimator.py  test_exceptions.py
predictably_core/tests/: __init__.py  conftest.py
predictably_core/utils/: __init__.py  _iter.py  _utils.py
predictably_core/utils/tests/: __init__.py  test_iter.py  test_utils.py
predictably_core/validate/: __init__.py  _types.py
predictably_core/validate/tests/: __init__.py  test_type_validations.py
